[Fetch API] Implement combining of Headers for same keys.

Currently FetchHeaderList::sortAndCombine() only sorts the list and does not
combine values for the same key. This CL implements the missing part in the
function.

BUG=670439, 667376

Review-Url: https://codereview.chromium.org/2559273005
Cr-Commit-Position: refs/heads/master@{#438615}

Former-commit-id: da6e2412d9e3547954e1196c3b8d523be7090df6